<resources>
    <string name="app_name">القرآن الكريم</string>
    <string name="Hefz">حفظ وسماع</string>
    <string name="Telawa">تلاوة</string>
    <string name="Sora">سورة</string>
    <string name="Saf7a">صفحة</string>
    <string name="Or">أو</string>
    <string name="from">من</string>
    <string name="to">إلى</string>
    <string name="ayah_Repetition">تكرار الاية</string>
    <string name="fakra_Repetition">تكرار الفقرة</string>
    <string-array name="ArrayOfSoraNames">
        <item>الفاتحة</item>
        <item>البقرة</item>
        <item> آل عمران</item>
        <item>النساء </item>
        <item>المائدة</item>
        <item>الأنعام</item>
        <item>الأعراف</item>
        <item>الأنفال</item>
        <item>التوبة</item>
        <item>يونس</item>
        <item>هود</item>
        <item>يوسف</item>
        <item>الرعد</item>
        <item>إبراهيم</item>
        <item>الحجر</item>
        <item>النحل</item>
        <item>الإسراء</item>
        <item>الكهف</item>
        <item>مريم</item>
        <item>طه</item>
        <item>الأنبياء</item>
        <item>الحج</item>
        <item>المؤمنون</item>
        <item>النور</item>
        <item>الفرقان</item>
        <item>الشعراء</item>
        <item>النمل</item>
        <item>القصص</item>
        <item>العنكبوت</item>
        <item>الروم</item>
        <item>لقمان</item>
        <item>السجدة</item>
        <item>الأحزاب</item>
        <item>سبأ</item>
        <item>فاطر</item>
        <item>يس</item>
        <item>الصافات</item>
        <item>ص</item>
        <item>الزمر</item>
        <item>غافر</item>
        <item>فصلت</item>
        <item>الشورى</item>
        <item>الزخرف</item>
        <item>الدخان</item>
        <item>الجاثية</item>
        <item>الأحقاف</item>
        <item>محمد</item>
        <item>الفتح</item>
        <item>الحجرات</item>
        <item>ق</item>
        <item>الذاريات</item>
        <item>الطور</item>
        <item>النجم</item>
        <item>القمر</item>
        <item>الرحمن</item>
        <item>الواقعة</item>
        <item>الحديد</item>
        <item>المجادلة</item>
        <item>الحشر</item>
        <item>الممتحنة</item>
        <item>الصف</item>
        <item>الجمعة</item>
        <item>المنافقون</item>
        <item>التغابن</item>
        <item>الطلاق</item>
        <item>التحريم</item>
        <item>الملك</item>
        <item>القلم</item>
        <item>الحاقة</item>
        <item>المعارج</item>
        <item>نوح</item>
        <item>الجن</item>
        <item>المزّمِّل</item>
        <item>المدّثر</item>
        <item>القيامة</item>
        <item>الإنسان</item>
        <item>المرسلات</item>
        <item>النبأ</item>
        <item>النازعات</item>
        <item>عبس</item>
        <item>التكوير</item>
        <item>الإنفطار</item>
        <item>المطففين</item>
        <item>الانشقاق</item>
        <item>البروج</item>
        <item>الطارق</item>
        <item>الأعلى</item>
        <item>الغاشية</item>
        <item>الفجر</item>
        <item>البلد</item>
        <item>الشمس</item>
        <item>الليل</item>
        <item>الضحى</item>
        <item>الشرح</item>
        <item>التين</item>
        <item>العلق</item>
        <item>القدر</item>
        <item>البينة</item>
        <item>الزلزلة</item>
        <item>العاديات</item>
        <item>القارعة</item>
        <item>التكاثر</item>
        <item>العصر</item>
        <item>الهُمَزَة</item>
        <item>الفيل</item>
        <item>قريش</item>
        <item>الماعون</item>
        <item>الكوثر</item>
        <item>الكافرون</item>
        <item>النصر</item>
        <item>المسد</item>
        <item>الإخلاص</item>
        <item>الفلق</item>
        <item>الناس</item>
    </string-array>

    <string-array name="ArrayOfSoraPagrNum">
        <item>1</item>
        <item>2</item>
        <item>50</item>
        <item>77 </item>
        <item>106</item>
        <item>128</item>
        <item>151</item>
        <item>177</item>
        <item>187</item>
        <item>208</item>
        <item>221</item>
        <item>235</item>
        <item>249</item>
        <item>255</item>
        <item>262</item>
        <item>267</item>
        <item>282</item>
        <item>293</item>
        <item>305</item>
        <item>312</item>
        <item>322</item>
        <item>332</item>
        <item>342</item>
        <item>350</item>
        <item>359</item>
        <item>367</item>
        <item>377</item>
        <item>385</item>
        <item>396</item>
        <item>404</item>
        <item>411</item>
        <item>415</item>
        <item>418</item>
        <item>428</item>
        <item>434</item>
        <item>440</item>
        <item>446</item>
        <item>453</item>
        <item>458</item>
        <item>467</item>
        <item>477</item>
        <item>483</item>
        <item>489</item>
        <item>496</item>
        <item>499</item>
        <item>502</item>
        <item>507</item>
        <item>511</item>
        <item>515</item>
        <item>518</item>
        <item>520</item>
        <item>523</item>
        <item>526</item>
        <item>528</item>
        <item>531</item>
        <item>534</item>
        <item>537</item>
        <item>542</item>
        <item>545</item>
        <item>549</item>
        <item>551</item>
        <item>553</item>
        <item>554</item>
        <item>556</item>
        <item>558</item>
        <item>560</item>
        <item>562</item>
        <item>564</item>
        <item>566</item>
        <item>568</item>
        <item>570</item>
        <item>572</item>
        <item>574</item>
        <item>575</item>
        <item>577</item>
        <item>578</item>
        <item>580</item>
        <item>582</item>
        <item>583</item>
        <item>585</item>
        <item>586</item>
        <item>587</item>
        <item>587</item>
        <item>589</item>
        <item>590</item>
        <item>591</item>
        <item>591</item>
        <item>592</item>
        <item>593</item>
        <item>594</item>
        <item>595</item>
        <item>595</item>
        <item>596</item>
        <item>596</item>
        <item>597</item>
        <item>597</item>
        <item>598</item>
        <item>598</item>
        <item>599</item>
        <item>599</item>
        <item>600</item>
        <item>600</item>
        <item>601</item>
        <item>601</item>
        <item>601</item>
        <item>602</item>
        <item>602</item>
        <item>602</item>
        <item>603</item>
        <item>603</item>
        <item>603</item>
        <item>604</item>
        <item>604</item>
        <item>604</item>
    </string-array>

    <string-array name="ArrayOfAhyasOfSuhraNum">
        <item>7</item>
        <item>286</item>
        <item>200</item>
        <item>176 </item>
        <item>120</item>
        <item>165</item>
        <item>206</item>
        <item>75</item>
        <item>129</item>
        <item>109</item>
        <item>123</item>
        <item>111</item>
        <item>43</item>
        <item>52</item>
        <item>99</item>
        <item>128</item>
        <item>111</item>
        <item>110</item>
        <item>98</item>
        <item>135</item>
        <item>112</item>
        <item>78</item>
        <item>118</item>
        <item>64</item>
        <item>77</item>
        <item>227</item>
        <item>93</item>
        <item>88</item>
        <item>69</item>
        <item>60</item>
        <item>34</item>
        <item>30</item>
        <item>73</item>
        <item>54</item>
        <item>45</item>
        <item>83</item>
        <item>182</item>
        <item>88</item>
        <item>75</item>
        <item>85</item>
        <item>54</item>
        <item>53</item>
        <item>89</item>
        <item>59</item>
        <item>37</item>
        <item>35</item>
        <item>38</item>
        <item>29</item>
        <item>18</item>
        <item>45</item>
        <item>60</item>
        <item>49</item>
        <item>62</item>
        <item>55</item>
        <item>78</item>
        <item>96</item>
        <item>29</item>
        <item>22</item>
        <item>24</item>
        <item>13</item>
        <item>14</item>
        <item>11</item>
        <item>11</item>
        <item>18</item>
        <item>12</item>
        <item>12</item>
        <item>30</item>
        <item>52</item>
        <item>52</item>
        <item>44</item>
        <item>28</item>
        <item>28</item>
        <item>20</item>
        <item>56</item>
        <item>40</item>
        <item>31</item>
        <item>50</item>
        <item>40</item>
        <item>46</item>
        <item>42</item>
        <item>29</item>
        <item>19</item>
        <item>36</item>
        <item>25</item>
        <item>22</item>
        <item>17</item>
        <item>19</item>
        <item>26</item>
        <item>30</item>
        <item>20</item>
        <item>15</item>
        <item>21</item>
        <item>11</item>
        <item>8</item>
        <item>8</item>
        <item>19</item>
        <item>5</item>
        <item>8</item>
        <item>8</item>
        <item>11</item>
        <item>11</item>
        <item>8</item>
        <item>3</item>
        <item>9</item>
        <item>5</item>
        <item>4</item>
        <item>7</item>
        <item>3</item>
        <item>6</item>
        <item>3</item>
        <item>5</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
