<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/layout_bg"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:paddingLeft="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:paddingTop="10dp">
            <EditText
                android:id="@+id/Saf7a_edit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:text="1"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="center"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:background="@color/color20"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/Saf7a"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Or"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            >

            <Spinner
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="40dp"
                android:background="@color/color20"
                android:id="@+id/Sora_spin1"
                android:textAlignment="center"
                android:spinnerMode="dialog"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/Sora"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        </LinearLayout>
        <Button
            android:id="@+id/Telawa_btn"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Telawa"
            android:textColor="@color/color16"
            android:background="@drawable/btn_bg"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_margin="10dp"/>

    </LinearLayout>
</ScrollView>
</LinearLayout>