<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="15dp">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:paddingLeft="10dp"
        android:paddingBottom="20dp"
        android:paddingTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <Spinner
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:background="@color/color20"
                android:layout_gravity="center"
                android:id="@+id/Sora_spin2"
                android:spinnerMode="dialog"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@color/color17"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/Sora"
                android:layout_gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <EditText
                android:id="@+id/To_edit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="1"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="center"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:background="@color/color20"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textAlignment="center"
                android:layout_marginRight="20dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            <EditText
                android:id="@+id/From_edit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="1"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="center"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:background="@color/color20"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="5dp">
            <EditText
                android:id="@+id/ayah_Repetition_edit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:maxLength="2"
                android:layout_gravity="center"
                android:text="1"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="center"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:background="@color/color20"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/ayah_Repetition"
                android:layout_marginRight="20dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
            <EditText
                android:id="@+id/fakra_Repetition_edit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="1"
                android:maxLength="2"
                android:layout_gravity="center"
                android:inputType="number"
                android:maxLines="1"
                android:textAlignment="center"
                android:singleLine="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:background="@color/color20"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/fakra_Repetition"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        </LinearLayout>
        <Button
            android:id="@+id/Hefz_btn"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/Hefz"
            android:textColor="@color/color16"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>
    </ScrollView>
</LinearLayout>